<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ER Triage</string>
    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>
    <string name="add_vitals">Add Vitals</string>
    <string name="view_vitals">View Vitals</string>
    <string name="dateandtime">January 1, 2012 18:08</string>
    <string name="hr">Heart Rate: </string>
    <string name="temp">Temperature: </string>
    <string name="bp">BP (Sys/Dia): </string>
    <string name="bp2">/</string>
    <string name="symp">Symptoms: </string>
    <string name="addVitalsButton">Save Vitals</string>
    <string name="title_activity_all_patients">All Patients</string>
    <string name="title_activity_view_vitals_activity">View Vitals Activity</string>
    <string name="MainMenu">Main Menu</string>
    <string name="title_activity_all_patients_list_adapter">AllPatientsListAdapter</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="sortListByUrgency">Sort list by Urgency</string>
    <string name="sortListByArrivalTime">Sort list by Arrival Time</string>
    <string name="title_activity_urgency_patient_list_fragment">UrgencyPatientListFragment</string>
    <string name="title_activity_arrival_time_patient_list_fragment">ArrivalTimePatientListFragment</string>
    <string name="title_activity_view_patient_info"> </string>
    <string name="patient_list">Patient List</string>
    <string name="TestButton">Test Button</string>
    <string name="search">Search</string>
    <string name="search_hint">Search Patients</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_add_vitals_activity">AddVitalsActivity</string>
    <string name="allPatientsButtonText">All Patients</string>
    <string name="urgency_tab_temp_msg">ER patients sorted by urgency will be listed here.</string>
    <string name="arrival_tab_temp_msg">ER patients sorted by arrival time will be listed here.</string>
    <string name="seenDocCheckBoxText">Seen Doctor</string>
    <string name="viewVitalsAddVitalsButton">New Vitals</string>
    <string name="unused">This is an unused class. I have no idea how you navigated here.t</string>
    <string name="patient_name">Name</string>
    <string name="health_card">Health Card</string>
    <string name="create_new_visit">Create a new visit</string>
    <string name="visit_name">Visit name</string>
    <string name="title_activity_login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_submit">Login</string>
    <string name="login_hospital_title">Triage</string>
    <string name="title_activity_nurse_menu">NurseMenu</string>
    <string name="toTriage">To Triage</string>
    <string name="toNewPatient">New Patient</string>
    <string name="toAllPatients">All Patients</string>
    <string name="title_activity_nurse_triage">Triage</string>
    <string name="title_activity_login_verification">Login Verification</string>
    <string name="toLogin">Login Test</string>
    <string name="title_activity_prescription_add">Add Prescription</string>
    <string name="meds_and_instructions">Medications and Instructions</string>
    <string name="save_prescription">Save Prescription</string>
    <string name="ViewVitalsGraphLabelHR">Heart Rate</string>
    <string name="ViewVitalsGraphLabelTemp">Temperature</string>
    <string name="ViewVitalsGraphLabelBP">Blood Pressure (Sys/Dia)</string>
    <string name="ViewVitalsGraphLabelSymp">Symptoms</string>
    <string name="ViewVitalsGraphLabelPres">Prescriptions</string>
    <string name="hintName">First Last </string>
    <string name="hintBirthday">Patient birthday</string>
    <string name="hintHealthCard">Health Card Number</string>
    <string name="title_activity_new_patient">New Patient</string>
    <string name="some_value">Please complete the following form to create a new patient</string>
    <string name="submit">Submit</string>
    <string name="basic_info"> </string>
    <string name="login_user_hint">Username</string>
    <string name="urgency">Urgency</string>

</resources>
