<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/birthday"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="27dp"
            android:onClick="addPatient"
            android:text="@string/submit" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="21dp"
            android:ems="10"
            android:hint="@string/hintName"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/healthcard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/name"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/hintHealthCard"
            android:inputType="text|number" />

        <Button
            android:id="@+id/birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/healthcard"
            android:layout_marginTop="18dp"
            android:ems="10"
            android:text="@string/hintBirthday" 
            android:onClick="showDatePickerDialog" />

</RelativeLayout>
