<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="match_parent"
 android:layout_height="match_parent" 
 android:padding="10dp">

    <TextView
        android:id="@+id/name_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="10dp"
        android:text="@string/patient_name" />
   
   
   
   
      <TextView
       android:id="@+id/health_card"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBaseline="@+id/urgency_display"
       android:layout_alignBottom="@+id/urgency_display"
       android:layout_alignParentRight="true"
       android:text="@string/health_card" />

      <TextView
          android:id="@+id/urgency_display"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignBaseline="@+id/name_display"
          android:layout_alignBottom="@+id/name_display"
          android:layout_marginRight="14dp"
          android:layout_toLeftOf="@+id/health_card"
          android:paddingLeft="10dp"
          android:text="@string/urgency" />

</RelativeLayout>
