<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AddVitalsActivityLinLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/date"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="18dp"
            android:gravity="center_vertical"
            android:text="@string/dateandtime"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/seenDoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/date"
            android:gravity="center_vertical|center"
            android:text="@string/seenDocCheckBoxText" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/hr"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:gravity="center_vertical"
            android:text="@string/hr" />

        <EditText
            android:id="@+id/editTextHR"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_vertical"
            android:inputType="numberSigned" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/temp"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:gravity="center_vertical"
            android:text="@string/temp" />

        <EditText
            android:id="@+id/editTextTemp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_vertical"
            android:inputType="numberDecimal" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/bp"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:gravity="center_vertical"
            android:text="@string/bp" />

        <EditText
            android:id="@+id/editTextBPSys"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_vertical"
            android:inputType="numberSigned" >
        </EditText>

        <TextView
            android:id="@+id/bp2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center_vertical"
            android:text="@string/bp2" />

        <EditText
            android:id="@+id/editTextBPDia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_vertical"
            android:inputType="numberSigned" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" >

        <TextView
            android:id="@+id/symp"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:gravity="center_vertical"
            android:text="@string/symp" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTextSymp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/addVitalsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="saveVitalsToPatient"
        android:text="@string/addVitalsButton" />

</LinearLayout>