<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <Space
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <Button
        android:id="@+id/toTriage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="moveToTriage"
        android:text="@string/toTriage" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <Button
        android:id="@+id/toNewPatients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="moveToNewPatients"
        android:text="@string/toNewPatient" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <Button
        android:id="@+id/toAllPatients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="moveToAllPatients"
        android:text="@string/toAllPatients" />

</LinearLayout>
